Avoid horizontal scrolling in Statistics page.

--- a/djmediastreamer/static/djmediastreamer/css/statistics.css
+++ b/djmediastreamer/static/djmediastreamer/css/statistics.css
@@ -1,3 +1,7 @@
 .modal-extra-lg {
   width: 95%;
 }
+
+.chart-row {
+  width: 100%;
+}
